--- a/index.html
+++ b/index.html
@@ -1,161 +1,102 @@
-	<!DOCTYPE html>
-	<html lang="zxx" class="no-js">
-<meta name="title" content="Bitsbiz Your way to digitize business">
-<meta name="description" content="Website making,  software development">
-<meta name="keywords" content="Website making">
-<meta name="robots" content="index, follow">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="language" content="English">
-<meta name="revisit-after" content="1 days">
-<meta name="author" content="Sandesh Mutha">
-	<head>
-		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
-		<!-- Author Meta -->
-		<meta name="author" content="colorlib">
-		<!-- Meta Description -->
-		<meta name="description" content="">
-		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
-		<!-- meta character set -->
-		<meta charset="UTF-8">
-		<!-- Site Title -->
-		<title>Sandesh Mutha</title>
+<!DOCTYPE html>
+<html>
 
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<!--
-			CSS
-			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/jquery-ui.css">				
-			<link rel="stylesheet" href="css/nice-select.css">							
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">					
-			<link rel="stylesheet" href="css/main.css">
-		</head>
-		<body>	
-		  <header id="header">
-		    <div class="container main-menu">
-		    	<div class="row align-items-center justify-content-between d-flex">
-			      <div id="logo">
-			        <a href="http://sandeshm22.github.io/"><img src="img/logo.png" alt="" title="" /></a>
-			      </div>
-			      <nav id="nav-menu-container">
-			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="services.html">Technology Dossier</a></li>			         					          					          		          
-			          <li><a href="journey.html">My Journey</a></li>
-			          <li><a href="contact.html">Contact</a></li>
-			        </ul>
-			      </nav><!-- #nav-menu-container -->		    		
-		    	</div>
-		    </div>
-		  </header><!-- #header -->
-		<div id ="bg-img-area">	  
-			<!-- Start home-about Area -->
-			<section class="home-about-area section-gap">
-				<div class="container">
-					<div class="row align-items-center justify-content-between">
-						<div class="col-lg-4 col-md-4 home-about-left">
-							<img class="img-fluid" src="img/about-img.png" alt="">
-						</div>
-						<div class="col-lg-8 col-md-8 home-about-right">
-							<p>
-								<p>Sandesh Mutha,<br/> 
-Software Engineer .</p> 
-<p>
-Software Engineering was the buzz around in the society when I passed my standard X . It had an impact on many of the lives of the people who passed out that year that included me. A passionate developer who dwells on learning new things as a part of his work is being described as my personality among my colleagues; not sure if its 100% correct but I get solace from what I do rather what people think of me. I started this blog with an aim to clear my concepts and help people to clear their concepts too!!! Thus giving back what I gain  from you people.
-							</p>
-						</div>
-						<div class="col-lg-12 pt-60">
-							</div>
-							
-						</div>
-					</div>
-				</div>	
-			</section>
-			<!-- End home-about Area -->	
+<head>
+	<meta charset='utf-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<title>Sandesh Mutha : Jack of All Master of None</title>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+	<script src='main.js'></script>
+</head>
 
-			<!-- End timeline Area -->
+<body>
+	<header class="text-gray-700 body-font">
+		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+			<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
+					stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-red-500 rounded-full"
+					viewBox="0 0 24 24">
+					<path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+				</svg>
+				<span class="ml-3 text-xl">Sandesh Mutha
+					<!--br style="width: 0em;" />
+					<font size="1">Jack of All Master of None</font-->
+				</span>
+			</a>
+			<nav
+				class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
+				<a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
+				<a class="mr-5 hover:text-gray-900" href='services.html'>Technology Dossier</a>
+				<a class="mr-5 hover:text-gray-900" href='packages.html'>Packages</a>
+				<a class="mr-5 hover:text-gray-900" href='journey.html'>Journey</a>
+				<a class="mr-5 hover:text-gray-900" href='contact.html'>Enquire</a>
+			</nav>
+		</div>
+	</header>
+	<hr />
+	<section class="text-gray-700 body-font">
+		<div class="container px-5 py-24 mx-auto flex flex-wrap">
+			<h2 class="sm:text-3xl text-2xl text-gray-900 font-medium title-font mb-2 md:w-2/5"><img
+					src='img/about-img.png' /></h2>
+			<div class="md:w-3/5 md:pl-6">
+				<p class="leading-relaxed text-base"><b><em>Sandesh Mutha,
+							Software Engineer
 
-            <!-- start footer Area -->
-            <footer class="footer-area section-gap">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-md-6 col-sm-6">
-                            <div class="single-footer-widget">
-                                <h4>About Me</h4>
-                                <p>
-                                    Sandesh Mutha
-                                </p>
-								<p>
-                                    Technology Enthusiast
-                                </p>
-                                <p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                            </div>
-                        </div>
-                        <div class="col-lg-5 col-md-6 col-sm-6">
-                            <div class="single-footer-widget">
-                                <h4>Newsletter</h4>
-                                <p>Stay updated</p>
-								<div class="" id="mc_embed_signup">
-									 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
-									  <div class="input-group">
-									    <input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
-									    <div class="input-group-btn">
-									      <button class="btn btn-default" type="submit">
-									        <span class="lnr lnr-arrow-right"></span>
-									      </button>    
-									    </div>
-									    	<div class="info"></div>  
-									  </div>
-									</form> 
-								</div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-                            <div class="single-footer-widget">
-                                <h4>Follow Me</h4>
-                                <p>Let us be social</p>
-                                <div class="footer-social d-flex align-items-center">
-                                    <a href="https://www.facebook.com/sandesh.mutha1/about"><i class="fa fa-facebook"></i></a>
-                                    <a href="https://twitter.com/MuthaSandesh"><i class="fa fa-twitter"></i></a>
-                                    <a href="https://www.linkedin.com/in/sandesh-mutha-92143150/"><i class="fa fa-linkedin"></i></a>
-									<a href="https://www.github.com/sandeshm22"><i class="fa  fa-github-square"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            <!-- End footer Area -->		
+						</em></b>
+					<br />
+					<br />
 
-			<script src="js/vendor/jquery-2.2.4.min.js"></script>
-			<script src="js/popper.min.js"></script>
-			<script src="js/vendor/bootstrap.min.js"></script>			
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>			
-  			<script src="js/easing.min.js"></script>			
-			<script src="js/hoverIntent.js"></script>
-			<script src="js/superfish.min.js"></script>	
-			<script src="js/jquery.ajaxchimp.min.js"></script>
-			<script src="js/jquery.magnific-popup.min.js"></script>	
-    		<script src="js/jquery.tabs.min.js"></script>						
-			<script src="js/jquery.nice-select.min.js"></script>	
-            <script src="js/isotope.pkgd.min.js"></script>			
-			<script src="js/waypoints.min.js"></script>
-			<script src="js/jquery.counterup.min.js"></script>
-			<script src="js/simple-skillbar.js"></script>							
-			<script src="js/owl.carousel.min.js"></script>							
-			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>
+					Software Engineering was the buzz around in the society when I passed my standard X . It had an
+					impact on many of the lives of the people who passed out that year that included me. A passionate
+					developer who dwells on learning new things as a part of his work is being described as my
+					personality among my colleagues; not sure if its 100% correct but I get solace from what I do rather
+					what people think of me.
 
-</div>
-		</body>
-	</html>
+					<br />
+
+			</div>
+
+		</div>
+	</section>
+	<footer class="text-gray-700 body-font">
+		<div class="bg-gray-200">
+			<div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+				<span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+					<a class="text-gray-500">
+						<svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							class="w-5 h-5" viewBox="0 0 24 24">
+							<path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+						</svg>
+					</a>
+					<a class="ml-3 text-gray-500">
+						<svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							class="w-5 h-5" viewBox="0 0 24 24">
+							<path
+								d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+							</path>
+						</svg>
+					</a>
+					<a class="ml-3 text-gray-500">
+						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+							stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+							<rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+							<path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+						</svg>
+					</a>
+					<a class="ml-3 text-gray-500">
+						<svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+							stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+							<path stroke="none"
+								d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z">
+							</path>
+							<circle cx="4" cy="4" r="2" stroke="none"></circle>
+						</svg>
+					</a>
+				</span>
+			</div>
+		</div>
+	</footer>
+</body>
+
+</html>
