--- a/services.html
+++ b/services.html
@@ -1,182 +1,161 @@
-	<!DOCTYPE html>
-	<html lang="zxx" class="no-js">
-	<head>
-		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
-		<!-- Author Meta -->
-		<meta name="author" content="colorlib">
-		<!-- Meta Description -->
-		<meta name="description" content="">
-		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
-		<!-- meta character set -->
-		<meta charset="UTF-8">
-		<!-- Site Title -->
-		<title>Sandesh Mutha</title>
+<!DOCTYPE html>
+<html>
 
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-			<!--
-			CSS
-			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">			
-			<link rel="stylesheet" href="css/nice-select.css">							
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">			
-			<link rel="stylesheet" href="css/jquery-ui.css">			
-			<link rel="stylesheet" href="css/main.css">
-		</head>
-		<body>	
-		  <header id="header">
-		    <div class="container main-menu">
-		    	<div class="row align-items-center justify-content-between d-flex">
-			      <div id="logo">
-			        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
-			      </div>
-			      <nav id="nav-menu-container">
-			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="services.html">Technology Dossier</a></li>
-					  <li><a href="journey.html">My Journey</a></li>
-			          <li><a href="contact.html">Contact</a></li>
-			        </ul>
-			      </nav><!-- #nav-menu-container -->		    		
-		    	</div>
-		    </div>
-		  </header><!-- #header -->
-		  	  
-			<!-- Start services Area -->
-			<section class="services-area section-gap">
-				<div class="container">
-		            <div class="row d-flex justify-content-center">
-		                <div class="menu-content  col-lg-7">
-		                    <div class="title text-center">
-		                        <h1 class="mb-10">Technology Dossier</h1>		                        
-		                        <p>Fun/Learning Projects By Me</p>		                        
-		                        <p><a href="htttp://www.github.com/sandeshm22">htttp://www.github.com/sandeshm22</a></p>		                        
-		                    </div>
-		                </div>
-		            </div>						
-					<div class="row">
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr">
-									<i class="fa fa-file">
-									</i>
-								</span>
-								<a href="#">
-									<h4>Document Extract</h4>
-								</a>
-								<p>
-									An implementation of Luhns Algorithm for Document Extract/Summary
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr">
-									<i class="fa fa-server" aria-hidden="true"></i>
-								</span>
-								<a href="#">
-									<h4>Tomcat Deployer</h4>
-								</a>
+<head>
+	<meta charset='utf-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<title>Sandesh Mutha : Jack of All Master of None</title>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+	<script src='main.js'></script>
+</head>
 
-								<p>
-									A sample shell script to deploy a war in tomcat and start
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr"><i class="fa fa-refresh"></i></span>
-								<a href="#"><h4>Walle</h4></a>
-								<p>
-									Change wallpaper in ubuntu command line. It has a timer set, which automatically refreshes the wallpaper periodically from a given path.
-								</p>
-								
-							</div>	
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr">
-									<i class="fa fa-file-excel-o" aria-hidden="true"></i>
-								</span>
-								<a href="#"><h4>XML Convertor</h4></a>
-								<p>
-									Convert object to an XML.
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
-								<span class="lnr"><i class="fa fa-facebook"></i></span>
-								<a href="#"><h4>Facebook API Python</h4></a>
-								<p>
-									This API connects to facebook for my login, retrives the feeds for myself and then stores in mongodb.
-								</p>
-							</div>
-						</div>														
+<body>
+	<header class="text-gray-700 body-font">
+		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+			<a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
+					stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-red-500 rounded-full"
+					viewBox="0 0 24 24">
+					<path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+				</svg>
+				<span class="ml-3 text-xl">Sandesh Mutha
+					<!--br style="width: 0em;" />
+					<font size="1">Jack of All Master of None</font-->
+				</span>
+			</a>
+			<nav
+				class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
+				<a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
+				<a class="mr-5 hover:text-gray-900" href='services.html'>Technology Dossier</a>
+				<a class="mr-5 hover:text-gray-900" href='journey.html'>Journey</a>
+				<a class="mr-5 hover:text-gray-900" href='gallery.html'>Gallery</a>
+				<a class="mr-5 hover:text-gray-900" href='contact.html'>Enquire</a>
+			</nav>
+		</div>
+	</header>
+	<section class="text-gray-700 body-font">
+		<div class="container px-5 py-24 mx-auto">
+			<div class="text-center mb-20">
+				<h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4">Raw Denim Heirloom Man Braid
+				</h1>
+				<p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto">Blue bottle crucifix vinyl post-ironic
+					four dollar toast vegan taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug.
+				</p>
+				<div class="flex mt-6 justify-center">
+					<div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
+				</div>
+			</div>
+			<div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
+				<div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+					<div
+						class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5 flex-shrink-0">
+						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+							stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
+							<path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
+						</svg>
 					</div>
-				</div>	
-			</section>
-			<!-- End services Area -->				
+					<div class="flex-grow">
+						<h2 class="text-gray-900 text-lg title-font font-medium mb-3">Shooting Stars</h2>
+						<p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast
+							vegan taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug VHS try-hard.
+						</p>
+						<a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
+							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+								stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+								<path d="M5 12h14M12 5l7 7-7 7"></path>
+							</svg>
+						</a>
+					</div>
+				</div>
+				<div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+					<div
+						class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5 flex-shrink-0">
+						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+							stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
+							<circle cx="6" cy="6" r="3"></circle>
+							<circle cx="6" cy="18" r="3"></circle>
+							<path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
+						</svg>
+					</div>
+					<div class="flex-grow">
+						<h2 class="text-gray-900 text-lg title-font font-medium mb-3">The Catalyzer</h2>
+						<p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast
+							vegan taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug VHS try-hard.
+						</p>
+						<a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
+							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+								stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+								<path d="M5 12h14M12 5l7 7-7 7"></path>
+							</svg>
+						</a>
+					</div>
+				</div>
+				<div class="p-4 md:w-1/3 md:mb-0 mb-6 flex flex-col text-center items-center">
+					<div
+						class="w-20 h-20 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-5 flex-shrink-0">
+						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+							stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
+							<path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
+							<circle cx="12" cy="7" r="4"></circle>
+						</svg>
+					</div>
+					<div class="flex-grow">
+						<h2 class="text-gray-900 text-lg title-font font-medium mb-3">Neptune</h2>
+						<p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast
+							vegan taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug VHS try-hard.
+						</p>
+						<a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
+							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+								stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+								<path d="M5 12h14M12 5l7 7-7 7"></path>
+							</svg>
+						</a>
+					</div>
+				</div>
+			</div>
+			<button
+				class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+		</div>
+	</section>
+	<footer class="text-gray-700 body-font">
+		<div class="bg-gray-200">
+			<div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+				<span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+					<a class="text-gray-500">
+						<svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							class="w-5 h-5" viewBox="0 0 24 24">
+							<path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+						</svg>
+					</a>
+					<a class="ml-3 text-gray-500">
+						<svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							class="w-5 h-5" viewBox="0 0 24 24">
+							<path
+								d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+							</path>
+						</svg>
+					</a>
+					<a class="ml-3 text-gray-500">
+						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+							stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+							<rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+							<path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+						</svg>
+					</a>
+					<a class="ml-3 text-gray-500">
+						<svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+							stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+							<path stroke="none"
+								d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z">
+							</path>
+							<circle cx="4" cy="4" r="2" stroke="none"></circle>
+						</svg>
+					</a>
+				</span>
+			</div>
+		</div>
+	</footer>
+</body>
 
-            <!-- start footer Area -->
-            <footer class="footer-area section-gap">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-md-6 col-sm-6">
-                            <div class="single-footer-widget">
-                                <h4>About Me</h4>
-                                <p>
-                                    Sandesh Mutha
-                                </p>
-								<p>
-                                    Software Engineer
-                                </p>
-                                <p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                            </div>
-                        </div>
-                        <div class="col-lg-5 col-md-6 col-sm-6">
-                            <div class="single-footer-widget">
-                                <h4>Newsletter</h4>
-                                <p>Stay updated</p>
-								<div class="" id="mc_embed_signup">
-									 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
-									  <div class="input-group">
-									    <input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
-									    <div class="input-group-btn">
-									      <button class="btn btn-default" type="submit">
-									        <span class="lnr lnr-arrow-right"></span>
-									      </button>    
-									    </div>
-									    	<div class="info"></div>  
-									  </div>
-									</form> 
-								</div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-                            <div class="single-footer-widget">
-                                <h4>Follow Me</h4>
-                                <p>Let us be social</p>
-                                <div class="footer-social d-flex align-items-center">
-                                    <a href="https://www.facebook.com/sandesh.mutha1/about"><i class="fa fa-facebook"></i></a>
-                                    <a href="https://twitter.com/MuthaSandesh"><i class="fa fa-twitter"></i></a>
-                                    <a href="https://www.linkedin.com/in/sandesh-mutha-92143150/"><i class="fa fa-linkedin"></i></a>
-									<a href="https://www.github.com/sandeshm22"><i class="fa  fa-github-square"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            <!-- End footer Area -->		
-		</body>
-	</html>
+</html>
